# Paystack-Django-Implementation

./: db.sqlite3  manage.py  pyproject.toml
Paystack/: asgi.py  settings.py  urls.py  wsgi.py
main/: urls.py  views.py
utils/: paystack.py
